<resources>
    <string name="app_name">Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="successfully_added">Successfully added</string>
    <string name="fill_all_data">Fill all data!</string>
    <string name="user_name_place_holder">%s %s</string>
    <string name="update">Update</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="delete">Delete</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="user_address_place_holder">%s, %s</string>
    <string name="search">Search</string>
</resources>